--- a/btl-fe/src/app/not-found/not-found.component.html
+++ b/btl-fe/src/app/not-found/not-found.component.html
@@ -40,7 +40,7 @@
       <article>
         <p>Uh oh! Looks like you got lost. <br>Go back to the homepage if you dare!</p>
         <button>
-          <a href="#" class="link">
+          <a href="/" class="link">
             i dare!
           </a>
         </button>
