--- a/btl-fe/src/app/not-found/not-found.component.scss
+++ b/btl-fe/src/app/not-found/not-found.component.scss
@@ -70,7 +70,6 @@ body {
   height: auto;
   font-family: $font-01;
   background: $bg-01;
-
 }
 
 .logo {
@@ -97,147 +96,6 @@ body {
   }
 }
 
-
-nav {
-  .menu {
-    width: 100%;
-    height: 80px;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    //background-color: red;
-    padding: 0 5%;
-    box-sizing: border-box;
-    z-index: 3;
-
-    .website_name {
-      color: $bg-01;
-      font-weight: 600;
-      font-size: 20px;
-      letter-spacing: 1px;
-      background: white;
-      padding: 4px 8px;
-      border-radius: 2px;
-      opacity: 0.5;
-      transition: all 0.4s ease;
-      cursor: pointer;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-
-    .menu_links {
-      transition: all 0.4s ease;
-      opacity: 0.5;
-
-      &:hover {
-        opacity: 1;
-      }
-
-      @include sm {
-        display: none;
-
-      }
-
-      .link {
-        color: white;
-        text-transform: uppercase;
-        font-weight: 500;
-        margin-right: 50px;
-        letter-spacing: 2px;
-        position: relative;
-        transition: all 0.3s 0.2s ease;
-
-        &:last-child {
-          margin-right: 0;
-        }
-
-        &:before {
-          content: '';
-          position: absolute;
-          width: 0px;
-          height: 4px;
-          background: $g-01;
-          bottom: -10px;
-          border-radius: 4px;
-          transition: all 0.4s cubic-bezier(0.82, 0.02, 0.13, 1.26);
-          left: 100%;
-        }
-
-        &:hover {
-          opacity: 1;
-          color: $m-01;
-
-          &:before {
-            width: 40px;
-            left: 0;
-
-
-          }
-        }
-      }
-    }
-
-    .menu_icon {
-      width: 40px;
-      height: 40px;
-      position: relative;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-
-
-      @include sm {
-        display: flex;
-      }
-
-      .icon {
-        width: 24px;
-        height: 2px;
-        background: white;
-        position: absolute;
-
-        &:before,
-        &:after {
-          content: '';
-          width: 100%;
-          height: 100%;
-          background: inherit;
-          position: absolute;
-          transition: all 0.3s cubic-bezier(0.49, 0.04, 0, 1.55);
-        }
-
-        &:before {
-          transform: translateY(-8px);
-        }
-
-        &:after {
-          transform: translateY(8px);
-        }
-
-
-      }
-
-      &:hover {
-        .icon {
-          background: $m-02;
-
-          &:before {
-            transform: translateY(-10px);
-          }
-
-          &:after {
-            transform: translateY(10px);
-          }
-        }
-      }
-    }
-  }
-}
-
 .wrapper {
   display: grid;
   grid-template-columns: 1fr;
@@ -245,6 +103,7 @@ nav {
   align-items: center;
   height: 100vh;
   overflow-x: hidden;
+  background: #8077EA;
 
   .container {
     margin: 0 auto;
