--- a/btl-fe/src/app/layout/centered-layout/centered-layout.component.scss
+++ b/btl-fe/src/app/layout/centered-layout/centered-layout.component.scss
@@ -1,10 +1,9 @@
-.centered-layout-container
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-color: #f5f5f5;
+.centered-layout-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f5f5f5;
 }
