--- a/btl-fe/src/app/layout/main-layout/main-layout.component.scss
+++ b/btl-fe/src/app/layout/main-layout/main-layout.component.scss
@@ -1,11 +1,9 @@
 #main-layout,
-#sidenav-container
-{
+#sidenav-container {
   height: 100vh;
 }
 
-#sidenav
-{
+#sidenav {
   width: 20%;
   border-radius: 15px;
 }
