--- a/btl-fe/src/app/not-found/not-found.component.html
+++ b/btl-fe/src/app/not-found/not-found.component.html
@@ -1,10 +1,6 @@
 <section class="wrapper">
-
   <div class="container">
-
     <div id="scene" class="scene" data-hover-only="false">
-
-
       <div class="circle" data-depth="1.2"></div>
 
       <div class="one" data-depth="0.9">
@@ -33,19 +29,18 @@
 
       <p class="p404" data-depth="0.50">404</p>
       <p class="p404" data-depth="0.10">404</p>
-
     </div>
 
     <div class="text">
       <article>
-        <p>Uh oh! Looks like you got lost. <br>Go back to the homepage if you dare!</p>
+        <p>
+          Uh oh! Looks like you got lost. <br />Go back to the homepage if you
+          dare!
+        </p>
         <button>
-          <a href="/" class="link">
-            i dare!
-          </a>
+          <a href="/" class="link"> i dare! </a>
         </button>
       </article>
     </div>
-
   </div>
 </section>
