--- a/btl-fe/src/styles.scss
+++ b/btl-fe/src/styles.scss
@@ -5,6 +5,6 @@ body {
 }
 
 body {
-  font-family: 'Roboto', 'Helvetica Neue', sans-serif;
-  margin: 0
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
+  margin: 0;
 }
