--- a/btl-fe/src/app/layout/main-layout/main-layout.component.html
+++ b/btl-fe/src/app/layout/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <div id="main-layout">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <img src="../../../assets/angularlogo.png" alt="" />
+      <img src="../../../assets/angularlogo.png" alt="" style="width: 2vw" />
       <!-- Add your logo if available-->
       <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
     </mat-toolbar-row>
