--- a/btl-fe/src/app/not-found/not-found.component.scss
+++ b/btl-fe/src/app/not-found/not-found.component.scss
@@ -61,36 +61,13 @@ body {
   }
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  height: auto;
-  font-family: $font-01;
-  background: $bg-01;
-}
-
-.logo {
-  position: fixed;
-  z-index: 5;
-  bottom: 10px;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.1);
-  border-radius: 100%;
-  backdrop-filter: blur(5px);
-
-  img {
-    width: 55%;
-    height: 55%;
-    transform: translateY(-1px);
-    opacity: 0.8;
-  }
-}
+// body {
+//   margin: 0;
+//   padding: 0;
+//   height: auto;
+//   font-family: $font-01;
+//   background: $bg-01;
+// }
 
 .wrapper {
   display: grid;
@@ -113,7 +90,7 @@ body {
     .scene {
       position: absolute;
       width: 100vw;
-      height: 100vh;
+      // height: 100vh;
       vertical-align: middle;
     }
 
@@ -131,6 +108,8 @@ body {
       min-height: 400px;
 
       .content {
+        // width: 400px;
+        // height: 400px;
         width: 600px;
         height: 600px;
         display: flex;
@@ -319,6 +298,8 @@ body {
       &:before {
         content: "";
         position: absolute;
+        // width: 600px;
+        // height: 600px;
         width: 800px;
         height: 800px;
         background-color: rgba($bg-02, 0.2);
@@ -350,6 +331,8 @@ body {
         &:before {
           content: "";
           position: absolute;
+          // width: 400px;
+          // height: 400px;
           width: 600px;
           height: 600px;
           background-color: rgba($bg-02, 0.3);
